Добавляет единый стиль ховера

--- a/src/sass/layouts/_cards.scss
+++ b/src/sass/layouts/_cards.scss
@@ -303,12 +303,20 @@
     width: 198px;
   }
 
-  color: $bg-white;
-  background-color: $main-text-color;
+  color: $main-text-color;
+  background-color: $bg-white;
 
-  &:hover {
+  &:hover,
+  &:focus {
     cursor: pointer;
-    background-color: $button-red-bg-hover;
+    background-color: $main-text-color;
+    color: $bg-white;
+    outline: none;
+  }
+
+  &:hover .cards-icon,
+  &:focus .cards-icon {
+    fill: $bg-white;
   }
 }
 
@@ -326,9 +334,17 @@
   color: $main-text-color;
   background-color: $bg-white;
 
-  &:hover {
+  &:hover,
+  &:focus {
     cursor: pointer;
-    background-color: $button-bg-hover;
+    background-color: $main-text-color;
+    color: $bg-white;
+    outline: none;
+  }
+
+  &:hover .cards-icon,
+  &:focus .cards-icon {
+    fill: $bg-white;
   }
 }
 
@@ -343,10 +359,7 @@
   }
 }
 
-.button-dark .cards-icon {
-  fill: $bg-white;
-}
-
+.button-dark .cards-icon,
 .button-light .cards-icon {
   fill: $main-text-color;
 }
