--- a/src/sass/layouts/_cow.scss
+++ b/src/sass/layouts/_cow.scss
@@ -178,7 +178,7 @@
   line-height: 1.29;
   align-items: center;
   color: $main-text-color;
-  background-color: #ffffff;
+  background-color: $bg-white;
   border-radius: 22px;
 
   @include for-size(tablet) {
@@ -189,8 +189,15 @@
 
   &:hover,
   &:focus {
-    background-color: $button-bg-hover;
+    outline: none;
+    color: $bg-white;
+    background-color: $main-text-color;
     @extend %animation;
+  }
+
+  &:hover .cow-link-icon,
+  &:focus .cow-link-icon {
+    fill: $bg-white;
   }
 }
 
