--- a/src/sass/layouts/_footer.scss
+++ b/src/sass/layouts/_footer.scss
@@ -69,8 +69,14 @@
 
   &:hover,
   &:focus {
+    outline: none;
     background-color: #d41443;
     @extend %animation;
+  }
+
+  &:hover .social-icons-svg,
+  &:focus .social-icons-svg {
+    fill: $bg-white;
   }
 }
 
