--- a/src/sass/layouts/_header.scss
+++ b/src/sass/layouts/_header.scss
@@ -21,7 +21,7 @@
 }
 
 .main-nav {
-  z-index: 1;
+  z-index: 3;
   width: 100%;
   display: flex;
   justify-content: space-between;
@@ -111,7 +111,14 @@
 
     &:hover,
     &:focus {
-      background-color: $button-bg-hover;
+      background-color: $main-text-color;
+      color: $bg-white;
+      outline: none;
+    }
+
+    &:hover .btn-icon,
+    &:focus .btn-icon {
+      fill: $bg-white;
     }
   }
 }
