--- a/src/sass/layouts/_products.scss
+++ b/src/sass/layouts/_products.scss
@@ -178,7 +178,13 @@
 
   &:hover,
   &:focus {
-    border: 1px solid $main-text-color;
+    outline: none;
+    background-color: $main-text-color;
+  }
+
+  &:hover .arrow-icon,
+  &:focus .arrow-icon {
+    fill: $bg-white;
   }
 }
 
