--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -16,11 +16,9 @@
                 </ul>
                 <picture class="hero-girl">
                     <source srcset="./images/desktop/hero/hero-girl.png 1x,
-                                                                ./images/desktop/hero/hero-girl@2x.png 2x"
-                        media="(min-width: 1050px)" />
+                    ./images/desktop/hero/hero-girl@2x.png 2x" media="(min-width: 1050px)" />
                     <source srcset="./images/tablet/hero/hero-girl.png 1x,
-                                                                ./images/tablet/hero/hero-girl@2x.png 2x"
-                        media="(min-width: 768px)" />
+                    ./images/tablet/hero/hero-girl@2x.png 2x" media="(min-width: 768px)" />
                     <img src="./images/desktop/hero/hero-girl.png" alt="Девушка" />
                 </picture>
             </div>
@@ -35,27 +33,33 @@
                 ut labore et</p>
             <picture class="hero-milkjar">
                 <source srcset="./images/desktop/hero/hero-milk.png 1x,
-                                                                    ./images/desktop/hero/hero-milk@2x.png 2x"
-                    media="(min-width: 1050px)" />
+                ./images/desktop/hero/hero-milk@2x.png 2x" media="(min-width: 1050px)" />
                 <source srcset="./images/tablet/hero/hero-milk.png 1x,
-                                                                    ./images/tablet/hero/hero-milk@2x.png 2x"
-                    media="(min-width: 768px)" />
+                ./images/tablet/hero/hero-milk@2x.png 2x" media="(min-width: 768px)" />
                 <img src="./images/desktop/hero/hero-milk.png" alt="Кувшин с молоком" />
             </picture>
         </div>
-        <a class="hero-link" href=""></a>
+        <button type="button" class="hero-link">
+            <svg class="hero-arrow">
+                <use href="./images/sprite.svg#icon-arrow"></use>
+            </svg>
+        </button>
         <!-- <div class="hero-circle"></div> -->
     </div>
 
-    <picture class="hero-icecream">
-        <source srcset="./images/desktop/hero/hero-ice-cream.png 1x,
-                                        ./images/desktop/hero/hero-ice-cream@2x.png 2x" media="(min-width: 1050px)" />
-        <source srcset="./images/tablet/hero/hero-ice-cream.png 1x,
-                                        ./images/tablet/hero/hero-ice-cream@2x.png 2x" media="(min-width: 768px)" />
-        <source srcset="./images/mobile/hero/hero-ice-cream.png 1x,
-                                        ./images/mobile/hero/hero-ice-cream@2x.png 2x" media="(max-width: 767px)" />
-        <img src="./images/desktop/hero/hero-ice-cream.png" alt="Мороженное" />
-    </picture>
+    <div class="hero-icecream">
+        <div class="hero-wrapping">
+            <picture>
+                <source srcset="./images/desktop/hero/hero-ice-cream.png 1x,
+        ./images/desktop/hero/hero-ice-cream@2x.png 2x" media="(min-width: 1050px)" />
+                <source srcset="./images/tablet/hero/hero-ice-cream.png 1x,
+        ./images/tablet/hero/hero-ice-cream@2x.png 2x" media="(min-width: 768px)" />
+                <source srcset="./images/mobile/hero/hero-ice-cream.png 1x,
+        ./images/mobile/hero/hero-ice-cream@2x.png 2x" media="(max-width: 767px)" />
+                <img src="./images/desktop/hero/hero-ice-cream.png" alt="Мороженное" />
+            </picture>
+            <div class="hero-circle"></div>
+        </div>
+    </div>
 
-    <div class="hero-circle"></div>
 </section>
