Поставила hover и добавила id

--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -1,4 +1,4 @@
-<section class="products-container">
+<section id="#products" class="products-container">
     <div class="container">
         <div class="products">
             <h2 class="products-text-title">100% natural</h2>
