--- a/src/sass/layouts/_cow.scss
+++ b/src/sass/layouts/_cow.scss
@@ -178,7 +178,7 @@
   line-height: 1.29;
   align-items: center;
   color: $main-text-color;
-  background-color: $bg-white;
+  background-color: #ffffff;
   border-radius: 22px;
 
   @include for-size(tablet) {
@@ -189,15 +189,8 @@
 
   &:hover,
   &:focus {
-    outline: none;
-    color: $bg-white;
-    background-color: $main-text-color;
+    background-color: $button-bg-hover;
     @extend %animation;
-  }
-
-  &:hover .cow-link-icon,
-  &:focus .cow-link-icon {
-    fill: $bg-white;
   }
 }
 
