--- a/src/sass/layouts/_hero.scss
+++ b/src/sass/layouts/_hero.scss
@@ -1,9 +1,9 @@
 .hero-cover {
   position: relative;
   background-color: $bg-hero;
-  height: 420px;
+  height: 502px;
   // z-index: 1;
-  overflow: hidden;
+  overflow-y: hidden;
 
   @include for-size(tablet) {
     height: 317px;
@@ -18,7 +18,7 @@
 .hero-container {
   position: relative;
   z-index: 10;
-  padding-top: 110px;
+  padding-top: 193px;
 
   @include for-size(mobile-only) {
     padding-left: 20px;
@@ -215,36 +215,31 @@
   }
 }
 
-.hero-ice-container {
-  position: relative;
-}
-
-.hero-wrapping {
-  position: relative;
-}
-
 .hero-circle {
   position: absolute;
-  top: -10px;
-  left: -85px;
+  top: 83px;
+  left: 36px;
 
   width: 345px;
   height: 345px;
   background-color: $second-text-color;
   border-radius: 50%;
-  z-index: -1;
+  z-index: 0;
 
   @include for-size(tablet) {
     width: 323px;
     height: 323px;
-    top: -40px;
-    left: -70px;
+    // top: -59px;
+    // left: 318px;
+    top: -19%;
+    left: 41%;
   }
   @include for-size(desktop) {
     width: 538px;
     height: 538px;
-    top: -50px;
-    left: -120px;
+    top: -75px;
+    // left: 380px;
+    left: 36%;
   }
 }
 
@@ -253,16 +248,13 @@
     display: none;
   }
   @include for-size(tablet) {
-    border: none;
+    display: block;
     width: 18px;
     height: 18px;
     border-radius: 50%;
     background-color: $bg-white;
     margin-top: 7px;
     margin-left: 120px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
   }
   @include for-size(desktop) {
     width: 26px;
@@ -271,31 +263,9 @@
   }
 }
 
-.hero-link:hover,
-.hero-link:focus {
-  background-color: $main-text-color;
-  outline: none;
-}
-
-.hero-arrow {
-  width: 8px;
-  height: 8px;
-  fill: $main-text-color;
-}
-
-.hero-link:hover > .hero-arrow,
-.hero-link:focus > .hero-arrow {
-  fill: $bg-white;
-}
-
 .hero-icecream {
   position: absolute;
   z-index: 2;
-  width: 171px;
-  height: 410px;
-  top: 10px;
-  left: 37%;
-
   @include for-size(tablet) {
     width: 143px;
     height: 336px;
@@ -345,7 +315,6 @@
   position: absolute;
   z-index: 2;
   display: none;
-
   @include for-size(tablet) {
     display: block;
     width: 168px;
