--- a/src/sass/components/_buttons.scss
+++ b/src/sass/components/_buttons.scss
@@ -64,11 +64,10 @@
   &-hero {
     margin-right: 8px;
     @include for-size(tablet) {
-      margin-bottom: 66px;
+      // margin-bottom: 66px;
     }
 
     @include for-size(desktop) {
-      margin-bottom: 112px;
       margin-right: 15px;
     }
   }
