--- a/src/sass/layouts/_hero.scss
+++ b/src/sass/layouts/_hero.scss
@@ -45,7 +45,7 @@
   }
 
   @include for-size(desktop) {
-    padding-top: 160px;
+    padding-top: 171px;
     padding-bottom: 45px;
     height: 665px;
 
@@ -56,8 +56,7 @@
     background-position: 60% 100%, 68% 52px;
 
     @media (min-resolution: 2dppx) {
-      background-image: url(../images/pictures/hero/desktop/hero_milk_2x_d.png),
-        url(../images/pictures/hero/desktop/hero_ice_2x_d.png),
+      background-image: url(../images/pictures/hero/desktop/hero_ice_2x_d.png),
         url(../images/pictures/hero/desktop/hero_ellipse_2x_d.png);
     }
   }
@@ -66,7 +65,7 @@
 .hero-milk {
   position: absolute;
   left: 15px;
-  bottom: 0;
+  bottom: 28px;
   width: 124px;
   height: 126px;
 
@@ -89,6 +88,11 @@
     width: 188px;
     height: 191px;
     left: 0px;
+    bottom: 45px;
+
+    @media (min-resolution: 2dppx) {
+      background-image: url(../images/pictures/hero/desktop/hero_milk_2x_d.png);
+    }
   }
 }
 
@@ -166,9 +170,11 @@
 
   @include for-size(tablet) {
     width: 162px;
+    margin-bottom: 66px;
   }
   @include for-size(desktop) {
     width: 277px;
+    margin-bottom: 112px;
   }
 }
 
