--- a/src/partials/shops.html
+++ b/src/partials/shops.html
@@ -12,7 +12,7 @@
             </li>
           </ul>
           <ul class="shops-schedule-1">    
-            <li>
+            <li class="shops-schedule">
               <p class="shops-working-days">Monday - Friday</p>
               <p class="shops-working-hours">06:00 AM - 10:00 PM</p>
             </li>
@@ -40,7 +40,7 @@
             </li>
           </ul>
           <ul class="shops-schedule-1">    
-            <li>
+            <li class="shops-schedule">
               <p class="shops-working-days">Monday - Friday</p>
               <p class="shops-working-hours">06:00 AM - 10:00 PM</p>
             </li>
@@ -68,7 +68,7 @@
             </li>
           </ul>
           <ul class="shops-schedule-1">    
-            <li>
+            <li class="shops-schedule">
               <p class="shops-working-days">Monday - Friday</p>
               <p class="shops-working-hours">06:00 AM - 10:00 PM</p>
             </li>
