создала дополнительный div

--- a/src/partials/components.html
+++ b/src/partials/components.html
@@ -18,6 +18,10 @@
 
 
     </div>
-    <div class="components "></div>
+    <div class="subject">
+        <div class="components ">
+            
+        </div></div>
+    
 
 </section>
