--- a/src/sass/layouts/_components.scss
+++ b/src/sass/layouts/_components.scss
@@ -1,10 +1,11 @@
 .components {
   display: flex;
-  height: 430px;
+  width: 100%;
+  padding-bottom: 38.125%;
 
   background-repeat: no-repeat;
   background-position: center;
-  background-size: cover;
+  background-size: contain;
 
   margin-left: 0;
   margin-right: 0;
@@ -12,7 +13,6 @@
 @media screen and (max-width: 739px) {
   .components {
     background-image: url(../images/bitmap/many-pictures/mob-pics@1x.png);
-    height: 122px;
   }
   @media screen and (min-device-pixel-ratio: 2),
     screen and (min-resolution: 192dpi),
@@ -25,7 +25,6 @@
 @media screen and (min-width: $tablet) and (max-width: 1279px) {
   .components {
     background-image: url(../images/bitmap/many-pictures/tab-pics@1x.png);
-    height: 264px;
   }
   @media screen and (min-device-pixel-ratio: 2),
     screen and (min-resolution: 192dpi),
