--- a/src/partials/How-it’s-made.html
+++ b/src/partials/How-it’s-made.html
@@ -1,6 +1,7 @@
 <!-- How it’s made? -->
 <!-- hm = how made -->
-<section class="container how-made" id="recipy">
+<section class="how-made" id="made">
+    <div class="container">
     <div class="hm-backgroung-image"></div>
     <p class="hm-h3">tradition and love </p>
     <h2 class="hm-h2">how it’s made?</h2>
@@ -70,4 +71,5 @@
     
         <img class="hm-collage" src="./images/section3/collage-mob.jpg" alt="Collage" />
     </picture>
+    </div>
 </section>
