--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -1,4 +1,5 @@
-<section class="container overley" id="contact">
+<section class=" overley">
+    <div class="container">
     <div class="cover"></div>
     <div class="contacts-cards">
         <ul class="contact-list">
@@ -81,5 +82,6 @@
         <button class="btn2 contacts-btn2">Franchise<svg class="go-icon2" width=16 height=16>
             <use href="./images/icons/sprite.svg#icon-go-icon"></use>
         </svg></button>
+    </div>
     </div>
 </section>
