--- a/src/partials/header-hero.html
+++ b/src/partials/header-hero.html
@@ -1,5 +1,4 @@
 <section class="container head-container">
-
     <div class="above-container">
         <!-- NAV -->
         <header>
@@ -15,7 +14,7 @@
                     <li class="nav-item"><a href="#about" class="nav-link">About us</a></li>
                     <li class="nav-item"><a href="#made" class="nav-link">How it’s made?</a></li>
                     <li class="nav-item"><a href="#products" class="nav-link">Our products</a></li>
-                    <li class="nav-item"><a href="#contact" class="nav-link">Contact</a></li>
+                    <li class="nav-item"><a href="#footer" class="nav-link">Contact</a></li>
                 </ul>
                 <div class="btn-container">
                     <button type="button" class="menu-btn open-btn" aria-label="menu-switcher" data-menu-open>
