--- a/src/sass/layout/_menu.scss
+++ b/src/sass/layout/_menu.scss
@@ -495,3 +495,16 @@
     color: $text-color-hero;
   }
 }
+
+.up-btn {
+  position: fixed;
+  z-index: 1000;
+
+  right: 10%;
+  bottom:10%;
+
+  width: 40px;
+  height: 40px;
+
+  font-weight: 700;
+}
