--- a/src/sass/main.css
+++ b/src/sass/main.css
@@ -2,6 +2,7 @@
 html {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
+  scroll-behavior: smooth;
 }
 
 *,
@@ -756,6 +757,16 @@ h6 {
 .pay-btn:hover, .pay-btn:focus {
   background-color: #c7133e;
   color: #ffffff;
+}
+
+.up-btn {
+  position: fixed;
+  z-index: 1000;
+  right: 10%;
+  bottom: 10%;
+  width: 40px;
+  height: 40px;
+  font-weight: 700;
 }
 
 .hero {
