--- a/src/partials/header-hero.html
+++ b/src/partials/header-hero.html
@@ -1,6 +1,6 @@
-<section class="container head-container">
+<section class="head-container">
 
-    <div class="above-container">
+    <div class="above-container" id="above">
         <!-- NAV -->
         <header>
             <nav class="nav">
@@ -243,14 +243,8 @@
         </div>
     </div>
 
-
-
-
-
-
-
 </section>
-
+<a href="#above" class="btn-circle up-btn">Up</a>
 
 <!-- <script src="../menu.js"></script>
 
