--- a/src/sass/main.css
+++ b/src/sass/main.css
@@ -2,7 +2,6 @@
 html {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
-  scroll-behavior: smooth;
 }
 
 *,
@@ -767,6 +766,18 @@ h6 {
   width: 40px;
   height: 40px;
   font-weight: 700;
+}
+
+.up-btn:hover, .up-btn:focus {
+  color: #ffffff;
+}
+
+@media screen and (min-width: 768px) {
+  .up-btn {
+    width: 50px;
+    height: 50px;
+    font-size: 30;
+  }
 }
 
 .hero {
