--- a/src/sass/main.css
+++ b/src/sass/main.css
@@ -53,6 +53,7 @@ img {
   .container {
     padding-left: 20px;
     padding-right: 20px;
+    width: 320px;
   }
 }
 
@@ -60,6 +61,7 @@ img {
   .container {
     padding-left: 35px;
     padding-right: 35px;
+    width: 768px;
   }
 }
 
@@ -67,6 +69,7 @@ img {
   .container {
     padding-left: 115px;
     padding-right: 115px;
+    width: 1200px;
   }
 }
 
