--- a/src/sass/layout/_menu.scss
+++ b/src/sass/layout/_menu.scss
@@ -495,8 +495,10 @@
   position: fixed;
   z-index: 1000;
 
-  right: 10%;
+  right: 5%;
   bottom:10%;
+
+  opacity: 0.5;
 
   width: 40px;
   height: 40px;
