--- a/src/partials/how_its_made.html
+++ b/src/partials/how_its_made.html
@@ -36,8 +36,8 @@
                     Aliquam erat volutpat. Aenean accumsan.
                 </p>
 
-                <a class="howitsmade-link">Read more
-                    <svg class="howitsmade-icon" width="4.5px" height="8px">
+                <a class="howitsmade-link" href="#">Read more
+                    <svg class="howitsmade-icon">
                         <use xlink:href="./images/icons/sprite.svg#vector"></use>
                     </svg>
                 </a>
