--- a/src/sass/layouts/_section-howitsmade.scss
+++ b/src/sass/layouts/_section-howitsmade.scss
@@ -205,19 +205,17 @@
 }
 
 .howitsmade-icon {
-  fill: $accent-color;
-  align-items: center;
-  vertical-align: middle;
+  width: 6px;
+  height: 10px;
   margin-left: 13.6px;
-  width: 4.5px;
-  height: 8px;
+  fill: none;
+  stroke: #d41443;
 }
 
 @include for-size(mobile-only) {
   .howitsmade-title-container {
     width: 100%;
     max-width: 220px;
-    margin-left: auto;
-    margin-right: auto;
+    margin: 0 auto;
   }
 }
