fix---slider__radio-buttons

--- a/src/partials/slider.html
+++ b/src/partials/slider.html
@@ -1,8 +1,8 @@
 <!-- Slider section -->
 <section id="#slider" class="slider-section">
   <div class="slider-container">
-    <ul class="slider-list">
-      <li class="slider-list-item girl-1">
+    <div class="slider-list">
+      <div class="slider-list-item girl-1">
         <div class="slider-list-text">
           <div class="slider-list-text-nines"></div>
           <p class="slider-text-underline">
@@ -11,9 +11,52 @@
             ipsum primis in nibh vel risus.
           </p>
         </div>
-        <p class="slider-list-under">Emily, Los Santos</p>
-      </li>
-      <!-- <li class="slider-list-item">
+      </div>
+
+      <div class="slider__radio-buttons">
+        <ul class="slider__radio-button--set-1">
+          <li class="slider__radio_btn">
+            <input id="radio1" type="radio" name="radio" /><label
+              for="radio1"
+            ></label>
+          </li>
+          <li class="slider__radio_btn">
+            <input id="radio2" type="radio" name="radio" /><label
+              for="radio2"
+            ></label>
+          </li>
+          <li class="slider__radio_btn">
+            <input id="radio3" type="radio" name="radio" />
+
+            <label for="radio3"></label>
+          </li>
+        </ul>
+      </div>
+
+      <p class="slider-list-under">Emily, Los Santos</p>
+
+
+        <div class="slider__radio-buttons">
+        <ul class="slider__radio-button--set-2">
+          <li class="slider__radio_btn ">
+            <input id="radio1" type="radio" name="radio" /><label class="slider__btn-label--home-icon"
+              for="radio1"
+            ></label>
+          </li>
+          <li class="slider__radio_btn">
+            <input id="radio2" type="radio" name="radio" /><label class="slider__btn-label"
+              for="radio2"
+            ></label>
+          </li>
+          <li class="slider__radio_btn">
+            <input id="radio3" type="radio" name="radio" />
+
+            <label class="slider__btn-label" for="radio3"></label>
+          </li>
+        </ul>
+      </div>
+
+    <!-- <li class="slider-list-item">
         <h3 class="slider-list-text">
           Nullam viverra consectetuer. Quisque cursus et, porttitor risus.
           Aliquam sem. In hendrerit nulla quam nunc, accumsan congue. Lorem
@@ -29,6 +72,5 @@
         </h3>
         <p class="slider-list-under">Barbara, San Adreas</p>
       </li> -->
-    </ul>
   </div>
 </section>
