--- a/src/partials/gallery.html
+++ b/src/partials/gallery.html
@@ -1,7 +1,7 @@
 <section class="gallery" id="gallery">
   <div class="container gallery-container">
     <picture class="gallery-picture">
-      <!-- <source
+      <!--   <source
         srcset="
           ./images/pictures/gallery/desktop/galleri-1280@1x.png 1x,
           ./images/pictures/gallery/desktop/galleri-1280@2x.png 2x
@@ -27,133 +27,223 @@
       <div class="gallery-section-one gallery-item">
         <picture class="gallery-img">
           <source
-            media="(min-width: 768px)"
-            srcset="./images/pictures/gallery/t/1-780@1x.png 780w,
-                    ./images/pictures/gallery/t/1-780@2x.png 780w"
-          >
+            srcset="
+              ./images/pictures/gallery/d/1-1280@1x.png 1x,
+              ./images/pictures/gallery/d/1-1280@2x.png 2x
+            "
+            media="(min-width: 1200px)"
+          />
           <source
-            srcset="./images/pictures/gallery/t/1-780@1x.png 1x,
-                    ./images/pictures/gallery/t/1-780@2x.png 2x"
-          >
-          <img src="./images/pictures/gallery/t/1-780@1x.png" alt="Picture of a Ha Long Bay sunset" class="new-gallery-img">
+            srcset="
+              ./images/pictures/gallery/t/1-780@1x.png 1x,
+              ./images/pictures/gallery/t/1-780@2x.png 2x
+            "
+            media="(min-width: 768px)"
+          />
+          <img
+            src="./images/pictures/gallery/d/1-1280@1x.png"
+            alt="Picture of a Ha Long Bay sunset"
+            class="new-gallery-img"
+          />
         </picture>
       </div>
       <div class="gallery-section-two gallery-item">
         <picture class="gallery-img">
           <source
-            media="(min-width: 768px)"
-            srcset="./images/pictures/gallery/t/2-780@1x.png 780w,
-                    ./images/pictures/gallery/t/2-780@2x.png 780w"
-          >
+            srcset="
+              ./images/pictures/gallery/d/2-1280@1x.png 1x,
+              ./images/pictures/gallery/d/2-1280@2x.png 2x
+            "
+            media="(min-width: 1200px)"
+          />
           <source
-            srcset="./images/pictures/gallery/t/2-780@1x.png 1x,
-                    ./images/pictures/gallery/t/2-780@2x.png 2x"
-          >
-          <img src="./images/pictures/gallery/t/2-780@1x.png" alt="Picture of a Ha Long Bay sunset" class="new-gallery-img">
+            srcset="
+              ./images/pictures/gallery/t/2-780@1x.png 1x,
+              ./images/pictures/gallery/t/2-780@2x.png 2x
+            "
+            media="(min-width: 768px)"
+          />
+          <img
+            src="./images/pictures/gallery/d/2-1280@1x.png"
+            alt="Picture of a Ha Long Bay sunset"
+            class="new-gallery-img"
+          />
         </picture>
         <picture class="gallery-img">
           <source
-            media="(min-width: 768px)"
-            srcset="./images/pictures/gallery/t/3-780@1x.png 780w,
-                    ./images/pictures/gallery/t/3-780@2x.png 780w"
-          >
+            srcset="
+              ./images/pictures/gallery/d/3-1280@1x.png 1x,
+              ./images/pictures/gallery/d/3-1280@2x.png 2x
+            "
+            media="(min-width: 1200px)"
+          />
           <source
-            srcset="./images/pictures/gallery/t/3-780@1x.png 1x,
-                    ./images/pictures/gallery/t/3-780@2x.png 2x"
-          >
-          <img src="./images/pictures/gallery/t/3-780@1x.png" alt="Picture of a Ha Long Bay sunset" class="new-gallery-img">
+            srcset="
+              ./images/pictures/gallery/t/3-780@1x.png 1x,
+              ./images/pictures/gallery/t/3-780@2x.png 2x
+            "
+            media="(min-width: 768px)"
+          />
+          <img
+            src="./images/pictures/gallery/d/3-1280@1x.png"
+            alt="Picture of a Ha Long Bay sunset"
+            class="new-gallery-img"
+          />
         </picture>
       </div>
       <div class="gallery-section-three gallery-item">
         <picture class="gallery-img">
           <source
-            media="(min-width: 768px)"
-            srcset="./images/pictures/gallery/t/4-780@1x.png 780w,
-                    ./images/pictures/gallery/t/4-780@2x.png 780w"
-          >
+            srcset="
+              ./images/pictures/gallery/d/4-1280@1x.png 1x,
+              ./images/pictures/gallery/d/4-1280@2x.png 2x
+            "
+            media="(min-width: 1200px)"
+          />
           <source
-            srcset="./images/pictures/gallery/t/4-780@1x.png 1x,
-                    ./images/pictures/gallery/t/4-780@2x.png 2x"
-          >
-          <img src="./images/pictures/gallery/t/4-780@1x.png" alt="Picture of a Ha Long Bay sunset" class="new-gallery-img">
+            srcset="
+              ./images/pictures/gallery/t/4-780@1x.png 1x,
+              ./images/pictures/gallery/t/4-780@2x.png 2x
+            "
+            media="(min-width: 768px)"
+          />
+          <img
+            src="./images/pictures/gallery/d/4-1280@1x.png"
+            alt="Picture of a Ha Long Bay sunset"
+            class="new-gallery-img"
+          />
         </picture>
         <picture class="gallery-img">
           <source
-            media="(min-width: 768px)"
-            srcset="./images/pictures/gallery/t/5-780@1x.png 780w,
-                    ./images/pictures/gallery/t/5-780@2x.png 780w"
-          >
+            srcset="
+              ./images/pictures/gallery/d/5-1280@1x.png 1x,
+              ./images/pictures/gallery/d/5-1280@2x.png 2x
+            "
+            media="(min-width: 1200px)"
+          />
           <source
-            srcset="./images/pictures/gallery/t/5-780@1x.png 1x,
-                    ./images/pictures/gallery/t/5-780@2x.png 2x"
-          >
-          <img src="./images/pictures/gallery/t/5-780@1x.png" alt="Picture of a Ha Long Bay sunset" class="new-gallery-img">
+            srcset="
+              ./images/pictures/gallery/t/5-780@1x.png 1x,
+              ./images/pictures/gallery/t/5-780@2x.png 2x
+            "
+            media="(min-width: 768px)"
+          />
+          <img
+            src="./images/pictures/gallery/d/5-1280@1x.png"
+            alt="Picture of a Ha Long Bay sunset"
+            class="new-gallery-img"
+          />
         </picture>
       </div>
       <div class="gallery-section-four gallery-item">
         <picture class="gallery-img">
           <source
-            media="(min-width: 768px)"
-            srcset="./images/pictures/gallery/t/6-780@1x.png 780w,
-                    ./images/pictures/gallery/t/6-780@2x.png 780w"
-          >
+            srcset="
+              ./images/pictures/gallery/d/6-1280@1x.png 1x,
+              ./images/pictures/gallery/d/6-1280@2x.png 2x
+            "
+            media="(min-width: 1200px)"
+          />
           <source
-            srcset="./images/pictures/gallery/t/6-780@1x.png 1x,
-                    ./images/pictures/gallery/t/6-780@2x.png 2x"
-          >
-          <img src="./images/pictures/gallery/t/6-780@1x.png" alt="Picture of a Ha Long Bay sunset" class="new-gallery-img">
+            srcset="
+              ./images/pictures/gallery/t/6-780@1x.png 1x,
+              ./images/pictures/gallery/t/6-780@2x.png 2x
+            "
+            media="(min-width: 768px)"
+          />
+          <img
+            src="./images/pictures/gallery/d/6-1280@1x.png"
+            alt="Picture of a Ha Long Bay sunset"
+            class="new-gallery-img"
+          />
         </picture>
         <picture class="gallery-img">
           <source
-            media="(min-width: 768px)"
-            srcset="./images/pictures/gallery/t/7-780@1x.png 780w,
-                    ./images/pictures/gallery/t/7-780@2x.png 780w"
-          >
+            srcset="
+              ./images/pictures/gallery/d/7-1280@1x.png 1x,
+              ./images/pictures/gallery/d/7-1280@2x.png 2x
+            "
+            media="(min-width: 1200px)"
+          />
           <source
-            srcset="./images/pictures/gallery/t/7-780@1x.png 1x,
-                    ./images/pictures/gallery/t/7-780@2x.png 2x"
-          >
-          <img src="./images/pictures/gallery/t/7-780@1x.png" alt="Picture of a Ha Long Bay sunset" class="new-gallery-img">
+            srcset="
+              ./images/pictures/gallery/t/7-780@1x.png 1x,
+              ./images/pictures/gallery/t/7-780@2x.png 2x
+            "
+            media="(min-width: 768px)"
+          />
+          <img
+            src="./images/pictures/gallery/d/7-1280@1x.png"
+            alt="Picture of a Ha Long Bay sunset"
+            class="new-gallery-img"
+          />
         </picture>
       </div>
       <div class="gallery-section-five gallery-item">
         <picture class="gallery-img">
           <source
-            media="(min-width: 768px)"
-            srcset="./images/pictures/gallery/t/8-780@1x.png 780w,
-                    ./images/pictures/gallery/t/8-780@2x.png 780w"
-          >
+            srcset="
+              ./images/pictures/gallery/d/8-1280@1x.png 1x,
+              ./images/pictures/gallery/d/8-1280@2x.png 2x
+            "
+            media="(min-width: 1200px)"
+          />
           <source
-            srcset="./images/pictures/gallery/t/8-780@1x.png 1x,
-                    ./images/pictures/gallery/t/8-780@2x.png 2x"
-          >
-          <img src="./images/pictures/gallery/t/8-780@1x.png" alt="Picture of a Ha Long Bay sunset" class="new-gallery-img">
+            srcset="
+              ./images/pictures/gallery/t/8-780@1x.png 1x,
+              ./images/pictures/gallery/t/8-780@2x.png 2x
+            "
+            media="(min-width: 768px)"
+          />
+          <img
+            src="./images/pictures/gallery/d/8-1280@1x.png"
+            alt="Picture of a Ha Long Bay sunset"
+            class="new-gallery-img"
+          />
         </picture>
         <picture class="gallery-img">
           <source
-            media="(min-width: 768px)"
-            srcset="./images/pictures/gallery/t/9-780@1x.png 780w,
-                    ./images/pictures/gallery/t/9-780@2x.png 780w"
-          >
+            srcset="
+              ./images/pictures/gallery/d/9-1280@1x.png 1x,
+              ./images/pictures/gallery/d/9-1280@2x.png 2x
+            "
+            media="(min-width: 1200px)"
+          />
           <source
-            srcset="./images/pictures/gallery/t/9-780@1x.png 1x,
-                    ./images/pictures/gallery/t/9-780@2x.png 2x"
-          >
-          <img src="./images/pictures/gallery/t/9-780@1x.png" alt="Picture of a Ha Long Bay sunset" class="new-gallery-img">
+            srcset="
+              ./images/pictures/gallery/t/9-780@1x.png 1x,
+              ./images/pictures/gallery/t/9-780@2x.png 2x
+            "
+            media="(min-width: 768px)"
+          />
+          <img
+            src="./images/pictures/gallery/d/9-1280@1x.png"
+            alt="Picture of a Ha Long Bay sunset"
+            class="new-gallery-img"
+          />
         </picture>
       </div>
       <div class="gallery-section-six gallery-item">
         <picture class="gallery-img">
           <source
-            media="(min-width: 768px)"
-            srcset="./images/pictures/gallery/t/10-780@1x.png 780w,
-                    ./images/pictures/gallery/t/10-780@2x.png 780w"
-          >
+            srcset="
+              ./images/pictures/gallery/d/10-1280@1x.png 1x,
+              ./images/pictures/gallery/d/10-1280@2x.png 2x
+            "
+            media="(min-width: 1200px)"
+          />
           <source
-            srcset="./images/pictures/gallery/t/10-780@1x.png 1x,
-                    ./images/pictures/gallery/t/10-780@2x.png 2x"
-          >
-          <img src="./images/pictures/gallery/t/10-780@1x.png" alt="Picture of a Ha Long Bay sunset" class="new-gallery-img">
+            srcset="
+              ./images/pictures/gallery/t/10-780@1x.png 1x,
+              ./images/pictures/gallery/t/10-780@2x.png 2x
+            "
+            media="(min-width: 768px)"
+          />
+          <img
+            src="./images/pictures/gallery/d/10-1280@1x.png"
+            alt="Picture of a Ha Long Bay sunset"
+            class="new-gallery-img"
+          />
         </picture>
       </div>
     </div>
