--- a/src/sass/layouts/_contacts.scss
+++ b/src/sass/layouts/_contacts.scss
@@ -308,6 +308,7 @@
   height: 10px;
   fill: $white;
   margin-left: 8px;
+  transition: fill 250ms $timing-function;
 
   @include for-size(tablet) {
     margin-left: 13.5px;
