--- a/src/partials/header-hero.html
+++ b/src/partials/header-hero.html
@@ -88,7 +88,7 @@
                         </p>
                         <button class="btn-circle">
                             <svg class="arrow-icon">
-                                <use href="././images/icons/sprite.svg#arrow-icon" width="9px"></use>
+                                <use href="././images/icons/sprite.svg#arrow-icon" ></use>
                             </svg>
                         </button>
                     </div>
