--- a/src/sass/layout/_menu.scss
+++ b/src/sass/layout/_menu.scss
@@ -8,6 +8,9 @@
 
   background-color: $accent-color;
 
+  position: relative;
+  z-index: 1002;
+
   @media screen and (min-width: 1280px) {
     padding: 0;
     height: 665px;
@@ -208,7 +211,7 @@
 
   @media screen and (min-width: 768px) {
     width: 33%;
-    height: 1020px;
+    height: 399px;
   }
 }
 
