--- a/src/sass/layout/_hero.scss
+++ b/src/sass/layout/_hero.scss
@@ -209,10 +209,13 @@
   fill: $title-text-color;
 
   width: 9px;
+  height: 9px;;
 
   @media screen and (min-width: 1280px) {
     width: 13px;
   }
+
+  
 }
 .r-block {
   display: none;
