--- a/src/sass/layout/_hero.scss
+++ b/src/sass/layout/_hero.scss
@@ -208,11 +208,12 @@
 .arrow-icon {
   fill: $title-text-color;
 
-  width: 9px;
-  height: 9px;;
+  width: 7px;
+  height: 5px;;
 
   @media screen and (min-width: 1280px) {
     width: 13px;
+    height: 7px;
   }
 
   
