Переделал кнопки в секции продукция

--- a/src/sass/layouts/_section-products.scss
+++ b/src/sass/layouts/_section-products.scss
@@ -290,3 +290,14 @@ margin-left: -30px;
     width: 40px;
     height: 40px;
 }
+.product-svg{
+    width: 12px;
+  height: 12px;
+  fill: $accent-color;
+  transition: 250ms;
+}
+.products-section {
+    .link-more-btn {
+    margin: auto;
+}
+}
