ховер і фокус для стрілки

--- a/src/sass/components/_btn.scss
+++ b/src/sass/components/_btn.scss
@@ -110,6 +110,8 @@
   cursor: pointer;
 }
 .btn-circle:hover .arrow-icon,
-.btn-circle:focus .aroww-icon {
+.btn-circle:focus .aroww-icon,
+.btn-circle:hover .arrow-icon-1,
+.btn-circle:focus .aroww-icon-1 {
   fill: $text-color-hero;
 }
