картинка с ретиной и нижние падинги секции

--- a/src/partials/slider.html
+++ b/src/partials/slider.html
@@ -1,7 +1,11 @@
 <section class="slider">
   <article class="slider-article">
-    <img class="slider-img" src="./images/bitmap/slider/desk-woman@1x.png" width="85" height="85"
-      alt="foto of testimonials1" />
+    <picture class="slider-img">
+      <source srcset="./images/bitmap/slider/desk-woman@1x.png 1x, ./images/bitmap/slider/desk-woman@2x.png 2x" media="(min-width: 1280px)" />
+      <source srcset="./images/bitmap/slider/tab-woman@1x.png 1x, ./images/bitmap/slider/tab-woman@2x.png 2x" media="(min-width: 740px)" />
+      <source srcset="./images/bitmap/slider/mob-woman@1x.png 1x, ./images/bitmap/slider/mob-woman@2x.png 2x" media="(max-width: 739px)" />
+      <img src="./images/bitmap/slider/mob-woman@1x.png" alt="foto of testimonials1" width="85" height="85" />
+    </picture>
     <p class="slider-text">
       Nullam viverra consectetuer. Quisque cursus et, porttitor risus.
       Aliquam sem. In hendrerit nulla quam nunc, accumsan congue. Lorem
