--- a/src/sass/layouts/_slider.scss
+++ b/src/sass/layouts/_slider.scss
@@ -1,7 +1,7 @@
 .slider {
   display: block;
   justify-content: center;
-  padding: 80px 20px 86px 20px;
+  padding: 80px 20px 170px 20px;
   margin-left: auto;
   margin-right: auto;
 
@@ -11,11 +11,11 @@
 
   @media screen and (min-width: $tablet) {
     width: $tablet;
-    padding: 121px 60px 119px 60px;
+    padding: 121px 60px 197px 60px;
   }
   @media screen and (min-width: $desktop) {
     width: $desktop;
-    padding: 123px 176px 132px 178px;
+    padding: 123px 176px 234px 178px;
   }
 
   &-text {
@@ -30,8 +30,8 @@
     text-align: center;
     background-color: #fafafa;
     color: #000000;
-    background-image: url(../images/bitmap/slider/underline-slider.png),
-      url(../images/bitmap/slider/dvoetochie.png);
+    background-image: url('./../images/bitmap/slider/underline-slider.png'),
+      url('./../images/bitmap/slider/dvoetochie.png');
     background-repeat: no-repeat;
     background-position: 50px 71px, 61px 28px;
 
@@ -47,10 +47,10 @@
       font-size: 14px;
       line-height: 2.16;
       letter-spacing: 0.04em;
-      background-image: url(../images/bitmap/slider/vector-tablet.png),
-        url(../images/bitmap/slider/vector-tablet.png),
-        url(../images/bitmap/slider/vector-tablet.png),
-        url(../images/bitmap/slider/dvoetochie.png);
+      background-image: url('./../images/bitmap/slider/vector-tablet.png'),
+        url('./../images/bitmap/slider/vector-tablet.png'),
+        url('./../images/bitmap/slider/vector-tablet.png'),
+        url('./../images/bitmap/slider/dvoetochie.png');
       background-repeat: no-repeat;
       background-position: 60px 76px, 60px 106px, 60px 136px, 40px 30px;
     }
@@ -61,18 +61,19 @@
       padding: 47px 89px 39px 87px;
       font-size: 16px;
       line-height: 1.86;
-      background-image: url(../images/bitmap/slider/vector-desk.png),
-        url(../images/bitmap/slider/vector-desk.png),
-        url(../images/bitmap/slider/dvoetochie.png);
+      background-image: url('./../images/bitmap/slider/vector-desk.png'),
+        url('./../images/bitmap/slider/vector-desk.png'),
+        url('./../images/bitmap/slider/dvoetochie.png');
       background-repeat: no-repeat;
       background-position: 60px 76px, 60px 106px, 50px 32px;
     }
   }
 
   &-img {
-    margin-left: auto;
-    margin-right: auto;
+    display: block;
+    margin-left: calc((100% - 85px) / 2);
     margin-bottom: 15px;
+    padding: 0;
   }
   &-subtitle {
     margin-left: auto;
@@ -106,7 +107,7 @@
       margin-right: auto;
       width: 32px;
       height: 4px;
-      background-image: url(../images/bitmap/slider/tre-ellips.png);
+      background-image: url('./../images/bitmap/slider/tre-ellips.png');
       background-repeat: no-repeat;
       background-position: center;
 
