--- a/src/sass/_header.scss
+++ b/src/sass/_header.scss
@@ -53,26 +53,25 @@
   top: 0;
   right: 0;
   width: 250px;
-  height: 502px;
+  height: 100vh;
   padding-top: 23px;
   z-index: 99;
 
   background: #e17992;
 
-  // transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
   @media screen and(min-width: 768px) {
     width: 254px;
-    height: 1020px;
   }
 
   @media screen and(min-width: 1200px) {
     position: relative;
     flex-grow: 2;
-    height: auto;
     margin-left: 212px;
     padding: 0;
     background: none;
+    height: auto;
   }
 }
 
@@ -81,13 +80,19 @@
 }
 
 .menu-container.menu-hidden {
-  display: none;
-  // opacity: 0;
-  // visibility: hidden;
-  // transform: translate(80%, 0%);
+  // display: none;
+  opacity: 0;
+  visibility: hidden;
+
+  @media screen and (max-width: 1199px) {
+    transform: translate(80%, 0%);
+    pointer-events: none;
+  }
 
   @media screen and(min-width: 1200px) {
     display: flex;
+    opacity: 1;
+    visibility: visible;
   }
 }
 
@@ -139,7 +144,10 @@
   }
 
   @media screen and(min-width: 1200px) {
-    margin-left: 100px;
+    position: absolute;
+    top: -12px;
+    right: 115px;
+    z-index: 100;
   }
 }
 
@@ -203,4 +211,8 @@
 
 .current {
   color: $accent-color;
+}
+
+.menu-open .hide {
+  display: none;
 }
