--- a/src/sass/_modal.scss
+++ b/src/sass/_modal.scss
@@ -8,6 +8,10 @@
   width: 100%;
   height: auto;
   // margin-top: 105px;
+  @media screen and(max-width: 767px) {
+  top:0;
+   transform:translate(-50%, 0) scale(0.75);
+  }
 
   background: $main-bg;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
